Cleanup (dead code; quick fixes; typos; formatting)
GitOrigin-RevId: 73ff0b4cd0dad5419a9a40ddf7f28fa4a2492fa7